# ground

./: .gitignore  AGENTS.md  CLAUDE.md  CURRENT.md  Cargo.toml  GROUND-BOOK.md  OVERVIEW.md  README.md  flake.nix  syntax.md
.ground/terra/stg-eu/: main.tf.json
devspec/: 0001-idea.md  0001-pln-ground.md  0001-rfc-ground.md  0002-rfc-terra-ops-async.md  0003-rfc-databases.md  0004-pln-semantic-core.md  0004-rfc-semantic-core.md  0005-rfc-parser-rewrite.md  0006-rfc-resolve-pass.md  0007-rfc-gen-tree.md  0008-rfc-use-packs.md  0009-rfc-gen-construct.md  0010-rfc-parser-test-review.md  0011-rfc-ir-test-review.md  0012-rfc-group-ref-resolution.md  0013-rfc-enum-ref-resolution.md  0014-rfc-gen-blocks.md  0015-pln-type-functions.md  0015-rfc-type-functions.md  0016-rfc-example.md  0016-rfc-ground-book.md  0017-rfc-scaling.md
docs/superpowers/plans/: 2026-04-10-transform-layer.md
docs/superpowers/specs/: 2026-04-10-transform-layer-design.md
mvp/: marstech.tf  std.grd  thoughts.md
mvp/marstech/: app.grd  ops.grd  pack.grd  poc.grd  routing.grd
mvp/marstech/env/: prd.grd  stg.grd
mvp/std/aws/: pack.grd  transform.grd  transform.ts
src/ground/: Cargo.toml
src/ground/src/: main.rs  ops_display.rs
src/ground_be_terra/: Cargo.toml  ground-terraform.md
src/ground_be_terra/src/: lib.rs
src/ground_compile/: Cargo.toml  README.md
src/ground_core/: Cargo.toml
src/ground_gen/: Cargo.toml
src/ground_lsp/: Cargo.toml
src/ground_parse/: Cargo.toml  README.md
src/ground_run/: Cargo.toml
src/ground_test/: Cargo.toml
src/ground_ts/: Cargo.toml
(+145 files in other folders)
