[package]
name = "ground"
version = "0.0.1-alpha"
edition = "2021"

[[bin]]
name = "ground"
path = "src/main.rs"

[dependencies]
ground_compile    = { path = "../ground_compile" }
ground_be_terra = { path = "../ground_be_terra" }
ground_run      = { path = "../ground_run" }
ground_lsp      = { path = "../ground_lsp" }
